edgehub/config/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edgehub
  labels:
    name: edgehub
---
apiVersion: v1
kind: Namespace
metadata:
  name: edgehub-system
  labels:
    name: edgehub-system
